--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -76,8 +76,8 @@
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+    color: #CC0000;
+    background: rgba(204, 0, 0, 0.2);
 }
 
 .sidebar-nav li a:active,
