--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,3 @@
-#navigation {
-	width: 950px;
-	height: 50px;
-	margin: 0;
-	padding: 0;
-	background: url(images/navigation-bg.jpg) no-repeat left top;
-} 
-#navigation ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-} 
-#navigation ul li {
-	display: inline;
-	margin: 0px;
-} 
-#navigation ul li a {
-	height:33px;
-	display: block;
-	float: left;
-	padding: 17px 15px 0 15px;
-	font: bold 12px Arial;
-	color: #FFF;
-	text-decoration: none;
-	background: url(images/navigation-separator.png) no-repeat right center;
-} 
-
-#navigation ul li a:hover {
-	color:#3B3B3B;
-	background: url(images/navigation-hover.png) repeat-x left top;
-}
-
-#navigation ul li#active a {
-	color:#3B3B3B;
-	background: url(images/navigation-hover.png) repeat-x left top;
+.my-navbar {
+	background; 3498db;
 }
